--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -223,18 +223,20 @@
 						  <li>현재 약 20여개의 은행이 가능하며 현금영수증 발행은 결제 시 즉시 발급받으실 수 있습니다.</li>
                         </ul>
                       </div>
-                      <input id="tp" name="price" type="hidden" >
                       <input id="memberNo" name="memberNo" type="hidden" th:value="${session.loginMember.memberNo}" >
-					  <th:block th:each="toy:${toy}">
 					  	<th:block th:if="${startDate}!=null">
+					  		<input id="tp" name="price" type="hidden" >
                       		<input id="startDate" name="startDate" th:value="${startDate}" type="hidden" >
                       		<input id="endDate" name="endDate" th:value="${endDate}" type="hidden" >
                       		<input id="toyNo" name="toyNo" th:value="${toy.toyNo}" type="hidden" >
                       	</th:block>
                       	<th:block th:unless="${startDate}!=null">
-                      		
+                      		<input id="totalprice" name="price" th:value="${totalPay}" type="hidden">
+                      		<input id="toyNoGroup" name="toyNo" type="hidden" >
+                      		<input id="toyStartDateGroup" name="startDate" type="hidden" >
+                      		<input id="toyEndDateGroup" name="endDate" type="hidden" >
+                      
                       	</th:block>
-					  </th:block>
 						</form> 
                       <h5 class="px-3 mt-4 fw-bold">주문자 동의</h5>
 							
@@ -292,27 +294,40 @@
                           (<span class="day"></span>일)
                           </th:block>
                           <th:block th:unless="${startDate != null}">
-                          [[${toy.startDate}]] ~ [[${toy.endDate}]]<br>
-                          (<span class="day" ></span>일)
+                          [[${#dates.format(toy.startDate, 'yyyy-MM-dd')}]] ~ [[${#dates.format(toy.endDate, 'yyyy-MM-dd')}]]<br>
+                          (<span th:text="${toy.date}"></span>일)
                           </th:block>
                           
                           </div>
                         <div class="form-inline pt-2 fw-bold price" style="color: #fc6c93;" th:if="${startDate !=null}">
                         </div>
-                        <div class="form-inline pt-2 fw-bold price" style="color: #fc6c93;" th:unless="${startDate !=null}" th:text="${toy.toyPay}+'원'">
+                        <div class="form-inline pt-2 fw-bold" style="color: #fc6c93;" th:unless="${startDate !=null}" th:text="${toy.realPay} + 원">
                         </div>
                       </div>
                     </div>
                     </th:block>    
-                
-                    <div class="py-4 border-bottom fw-bold">
-                      <span>총 대여금액</span><span class="pr price"></span><span> (1개)</span><br>
-                      <span>배송비</span><span class="pr">1000원</span>
-                    </div>
-
-                    <div class="py-4 fw-bold">
-                      <span>총 결제금액</span><span class="total"></span>
-                    </div>
+                    
+                	<th:block th:if="${startDate != null}">
+	                    <div class="py-4 border-bottom fw-bold">
+	                      <span>총 대여금액</span><span class="pr price"></span><span> (1개)</span><br>
+	                      <span>배송비</span><span class="pr">1000원</span>
+	                    </div>
+	
+	                    <div class="py-4 fw-bold">
+	                      <span>총 결제금액</span><span class="total"></span>
+	                    </div>
+                   </th:block>
+                   
+                	<th:block th:unless="${startDate != null}">
+	                    <div class="py-4 border-bottom fw-bold">
+	                      <span>총 대여금액</span><span class="pr price" >[[${pay}]]원</span><span> ([[${#lists.size(toy)}]]개)</span><br>
+	                      <span>배송비</span><span class="pr">1000원</span>
+	                    </div>
+	
+	                    <div class="py-4 fw-bold">
+	                      <span>총 결제금액</span><span class="total">[[${totalPay}]]원</span>
+	                    </div>
+                   </th:block>
                    
                     <button class="btn btn-primary btn-shadow d-block w-100 mt-4 pay" type="submit" form="orderForm" id="payment-button">결제하기</button>                   
                   
@@ -351,6 +366,19 @@
 </html>
 
 <script type="text/javascript" th:inline="javascript">
+function StringToDate(date) {
+	let yyyy = date.substring(0, 4);
+	let mm = date.substring(5, 7);
+	let dd = date.substring(8, 10);
+	mm = Number(mm) - 1;
+    
+	let stringNewDate = new Date(yyyy, mm, dd);
+	stringNewDate.setDate(stringNewDate.getDate());
+    
+	return stringNewDate.getFullYear() +
+		"-" + ((stringNewDate.getMonth() + 1) > 9 ? (stringNewDate.getMonth() + 1).toString() : "0" + (stringNewDate.getMonth() + 1)) +
+		"-" + (stringNewDate.getDate() > 9 ? stringNewDate.getDate().toString() : "0" + stringNewDate.getDate().toString());
+}
 //요청사항 직접입력
 $( document ).ready( function() {
     $( '.memo' ).keyup( function() {
@@ -379,6 +407,7 @@ var result= end-start;
 var day = result / (1000*60*60*24) ;
 $('.day').html(day);
 
+
 //리스트 인지 아닌지
 var toyVali = /*[[${toy}]]*/{};
 console.log(toyVali.length)
@@ -388,24 +417,44 @@ if(toyVali.length==undefined){
 	toy.push(/*[[${toy}]]*/{});
 }else{
 	toy= toyVali;
+	console.log(toy);
 }
 
 //장난감 가격
 var toyPrice = 0;
-console.log(toy);
 for(var i=0; i<toy.length; i++){
 	toyPrice += Number(toy[i].toyPay);
 }
 //일 X 가격
+//(일X가격) + 1000
 if(toyVali.length==undefined){
 	var price = day * toyPrice;
 	$('.price').html(price + "원");
-}
-//(일X가격) + 1000
-var totalPrice = price + 1000;
-$('.total').html(totalPrice + "원");
-$('#tp').attr('value', totalPrice);
-
+	var totalPrice = price + 1000;
+	$('.total').html(totalPrice + "원");
+	$('#tp').attr('value', totalPrice);
+}else{
+	var toyNoList = /*[[${toy}]]*/{};
+	var toyNoGroup = '';
+	var toyStartDateGroup = '';
+	var toyEndDateGroup = '';
+	for(var i=0; i<toyNoList.length; i++){
+		if(i==0){
+			toyNoGroup += toyNoList[i].toyNo;
+			toyStartDateGroup += StringToDate(toyNoList[i].startDate);
+			toyEndDateGroup += StringToDate(toyNoList[i].endDate);
+		}else{
+			toyNoGroup += ',' + toyNoList[i].toyNo;
+			toyStartDateGroup += ',' + StringToDate(toyNoList[i].startDate);
+			toyEndDateGroup += ',' + StringToDate(toyNoList[i].endDate);
+		}
+	}
+	$('#toyNoGroup').val(toyNoGroup);
+	$('#toyStartDateGroup').val(toyStartDateGroup);
+	$('#toyEndDateGroup').val(toyEndDateGroup);
+	var totalPrice = $('#totalprice').val();
+} 
+console.log("총금액(토스페이용)::" + totalPrice);
 
 //토스페이먼츠 결제
 //카드 계좌이체 선택
@@ -422,12 +471,12 @@ var toyName = "";
 if(toyVali.length==undefined){
 	toyName = toy[0].toyNm1
 }else{
-	toyName = toy[0].toyNm1+'외'+ toy.length;
+	toyName = toy[0].toyNm1+' 외 '+ (toy.length-1);
 }
 var cName = /*[[${session.loginMember.name}]]*/{};
 
 console.log(toyPrice);
-console.log(toyName);
+console.log("토이 이름::::::::"+toyName);
 console.log(cName);
 
 //토스에 보낼 주문번호 uuid
@@ -489,10 +538,11 @@ function checkForm(){
 		        beforeSend : function() {
 		        },
 				success : function(data){
+					console.log("data::::::::" + data);
 					tossPayments.requestPayment(paymethod, { // 결제 수단 파라미터
 					     // 결제 정보 파라미터
 					     amount: totalPrice,
-					     orderId: uuidv4()+"-"+data,
+					     orderId: uuidv4()+'-'+data,
 					     orderName: toyName,
 					     customerName: cName,
 					     successUrl: 'http://localhost/success',
