--- a/src/main/resources/templates/mypage-3.html
+++ b/src/main/resources/templates/mypage-3.html
@@ -160,7 +160,7 @@
 			  
               <div class="col mb-2">
                 <article class="card h-100 border-0 shadow">
-                  <div class="card-img-top position-relative overflow-hidden"><img src="img/ukids/nursery.JPG" alt="Product image">
+                  <div class="card-img-top position-relative overflow-hidden"><img th:src="|img/어린이집/nursery${stat.index}.JPG|" height="300px" alt="Product image">
                     <!-- Wishlist button-->
                     <button class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0" type="button"
                       data-bs-toggle="tooltip" data-bs-placement="top" title="찜 목록 삭제"
@@ -170,7 +170,7 @@
                   </div>
                     <div class="card-footer mt-n1 py-0 border-0 mb-3">
                       <div class="d-flex align-items-center position-relative py-3 mt-2">
-                      	<a class="nav-link-style fs-sm stretched-link" th:href="@{|/nursery-detail?&no=${nwish.knNo}&i=7|}">[[${nwish.knName}]]</a></div>
+                      	<a class="nav-link-style fs-sm stretched-link" th:href="@{|/nursery-detail?&no=${nwish.knNo}&i=${stat.index}|}">[[${nwish.knName}]]</a></div>
                         <i class="ci-location me-2 cgw16 fs-ms cgw27"></i><div class="fs-ms text-muted cgw24">[[${nwish.knAddr}]]</div>
                       </div>
                   </article>
@@ -229,7 +229,7 @@
 			  
               <div class="col mb-2">
                 <article class="card h-100 border-0 shadow">
-                  <div class="card-img-top position-relative overflow-hidden"><img src="img/ukids/nursery.JPG" alt="Product image">
+                  <div class="card-img-top position-relative overflow-hidden"><img th:src="|img/유치원/kinder${stat.index}.JPG|" alt="Product image">
                     <!-- Wishlist button-->
                     <button class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0" type="button"
                       data-bs-toggle="tooltip" data-bs-placement="top" title="찜 목록 삭제"
@@ -237,7 +237,7 @@
                   </div>
                     <div class="card-footer mt-n1 py-0 border-0 mb-3">
                       <div class="d-flex align-items-center position-relative py-3 mt-2">
-                      	<a class="nav-link-style fs-sm stretched-link" th:href="@{|/kinder-detail?&no=${kwish.knNo}&i=7|}">[[${kwish.knName}]]</a></div>
+                      	<a class="nav-link-style fs-sm stretched-link" th:href="@{|/kinder-detail?&no=${kwish.knNo}&i=${stat.index}|}">[[${kwish.knName}]]</a></div>
                         <i class="ci-location me-2 cgw16 fs-ms cgw27"></i><div class="fs-ms text-muted cgw24">[[${kwish.knAddr}]]</div>
                       </div>
                   </article>
