--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -92,14 +92,7 @@
                     <option value="authors">저자</option>
                   </select>
               </div>
-               <!--  <div class="dropdown" data-bs-toggle="select">
-                  <button class="btn btn-pink dropdown-toggle" type="button" data-bs-toggle="dropdown" id="filter-btn"><i class="ci-menu me-3"></i><span class="dropdown-toggle-label">필터</span></button>
-                  <input type="hidden" name="searchType" id="searchType" value="none">
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item book-search-filter" name="searchType" value="bookname"><i class="ci-edit-alt fs-sm me-2"></i><span class="dropdown-item-label">제목</span></a></li>
-                    <li><a class="dropdown-item book-search-filter" name="searchType" value="authors"><i class="ci-edit-alt fs-sm me-2"></i><span class="dropdown-item-label">저자</span></a></li>
-                  </ul>
-                </div> -->
+               
                 <input class="form-control" type="text" name="searchValue" th:value="${searchValue}" placeholder="도서 검색">
                 <button class="btn btn-secondary" type="submit"><i class="ci-search text-pink fs-base fw-bold"></i></button>
               </div>
@@ -141,7 +134,7 @@
                   <div class="card-body py-2 ps-0">
                     <div class="fs-xs text-info">[[${book.class_nm}]]</div>
                     <h5 class="card-title mb-1"><i class="ci-book fs-md me-1"></i>[[${book.bookname}]]</h5>
-                    <p class="card-text fs-sm text-muted mb-1">'도깨비를 빨아 버린 우리 엄마'의 흥미진진한 이야기를 통해 아이들의 창의력, 상상력 뿐만 아니라 어휘력 향상에 도움을 줄 수 있습니다.</p>
+                    <p class="card-text fs-sm text-muted mb-1">[[${book.detail}]]</p>
                     <div class="d-flex fs-sm"><div class="book-info-title">저자</div><div>[[${book.authors}]]</div></div>
                     <div class="d-flex fs-sm"><div class="book-info-title">출판사</div><div>[[${book.publisher}]]</div></div>
                     <div class="d-flex fs-sm"><div class="book-info-title">출판년도</div><div>[[${book.publication_year}]]</div></div>
