복지시설, 놀이시설, 병원 스타일 및 기능 수정 / 유채원 / 02-13 01:31 [주요내용] - 놀이시설 검색조건 설명 추가 	playground.html, playground.css
- 복지시설, 병원 근처시설이미지 크기가 달라도 깨지지 않도록 수정
	welfare-detail.css, hospital-detail.css

- 복지시설, 병원 상세이미지와 근처시설이미지가 겹치지 않도록 수정
	WelfareController.java, HospitalController.java

- 병원 야간진료선택 검색 후에도 유지되도록 수정
	hospital-main.html

- 자바스크립트 타임리프 문법 엑박 안 뜨도록 수정
	welfare-detail.html, hospital-detail.html, playground.html

--- a/src/main/resources/static/css/welfare-detail.css
+++ b/src/main/resources/static/css/welfare-detail.css
@@ -244,6 +244,10 @@
   margin-bottom: 0;
 } 
 /* 23.02.06 이미지 수정 */
-.wfImg{
+.wfImg {
   object-fit: cover;
+}
+/* 23.02.12 근처시설 이미지 수정 */
+.near {
+	object-fit: cover;
 }
