--- a/src/main/resources/static/css/playground.css
+++ b/src/main/resources/static/css/playground.css
@@ -147,3 +147,16 @@ h3:hover {
 .info-addr i {
   margin-right: 0.25rem;
 }
+
+/* 23.02.12 수정 */
+#pg-search .col-md-2 {
+  display: flex;
+  align-items: center;
+  width: auto;
+}
+#pg-search .col-md-2 h3 {
+  flex-shrink: 0;
+}
+#pg-search select {
+  width: 175px;
+}
