--- a/src/main/resources/templates/hospital-main.html
+++ b/src/main/resources/templates/hospital-main.html
@@ -119,7 +119,7 @@
                 </div>
               </div>
               <div class="form-check form-switch col-md-2 ms-3">
-                <input class="form-check-input" type="checkbox" id="nigthcare" name="nightcore">
+                <input class="form-check-input" type="checkbox" id="nigthcare" name="nightcore" value="on" th:checked="${param.nightcore} != null ? 'checked' : null">
                 <label class="form-check-label" for="nigthcare">야간 진료</label>
               </div>
             </div>
